--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -68,7 +68,7 @@
          <property name="geometry">
           <rect>
            <x>0</x>
-           <y>-13</y>
+           <y>0</y>
            <width>557</width>
            <height>672</height>
           </rect>
@@ -500,7 +500,11 @@
        </widget>
       </item>
       <item row="2" column="0" colspan="2">
-       <widget class="QTableView" name="entriesTable"/>
+       <widget class="QTableView" name="entriesTable">
+        <property name="alternatingRowColors">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
       <item row="0" column="0">
        <widget class="QPushButton" name="newDatabaseButton">
