--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -69,8 +69,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>557</width>
-           <height>672</height>
+           <width>575</width>
+           <height>663</height>
           </rect>
          </property>
          <layout class="QGridLayout" name="gridLayout_4">
@@ -83,33 +83,6 @@
               </property>
              </widget>
             </item>
-            <item row="15" column="3">
-             <widget class="QLineEdit" name="fromJobCatBEdit">
-              <property name="toolTip">
-               <string>Occupation</string>
-              </property>
-              <property name="placeholderText">
-               <string>Occupation</string>
-              </property>
-             </widget>
-            </item>
-            <item row="11" column="0">
-             <widget class="QLabel" name="label_6">
-              <property name="text">
-               <string>Paid to:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="12" column="3">
-             <widget class="QLineEdit" name="toJobCatBEdit">
-              <property name="toolTip">
-               <string>Occupation</string>
-              </property>
-              <property name="placeholderText">
-               <string>Occupation</string>
-              </property>
-             </widget>
-            </item>
             <item row="12" column="0">
              <widget class="QLineEdit" name="toForenameEdit">
               <property name="toolTip">
@@ -117,16 +90,6 @@
               </property>
               <property name="placeholderText">
                <string>Forename</string>
-              </property>
-             </widget>
-            </item>
-            <item row="12" column="2">
-             <widget class="QLineEdit" name="toJobCatAEdit">
-              <property name="toolTip">
-               <string>Sector</string>
-              </property>
-              <property name="placeholderText">
-               <string>Sector</string>
               </property>
              </widget>
             </item>
@@ -392,16 +355,6 @@
               </property>
              </widget>
             </item>
-            <item row="15" column="1">
-             <widget class="QLineEdit" name="fromSurnameEdit">
-              <property name="toolTip">
-               <string>Surname</string>
-              </property>
-              <property name="placeholderText">
-               <string>Surname</string>
-              </property>
-             </widget>
-            </item>
             <item row="18" column="2">
              <widget class="QLineEdit" name="commodCatAEdit">
               <property name="toolTip">
@@ -409,26 +362,6 @@
               </property>
               <property name="placeholderText">
                <string>General</string>
-              </property>
-             </widget>
-            </item>
-            <item row="15" column="0">
-             <widget class="QLineEdit" name="fromForenameEdit">
-              <property name="toolTip">
-               <string>Forename</string>
-              </property>
-              <property name="placeholderText">
-               <string>Forename</string>
-              </property>
-             </widget>
-            </item>
-            <item row="15" column="2">
-             <widget class="QLineEdit" name="fromJobCatAEdit">
-              <property name="toolTip">
-               <string>Sector</string>
-              </property>
-              <property name="placeholderText">
-               <string>Sector</string>
               </property>
              </widget>
             </item>
@@ -446,13 +379,6 @@
               </property>
               <property name="placeholderText">
                <string>Surname if yes</string>
-              </property>
-             </widget>
-            </item>
-            <item row="13" column="0">
-             <widget class="QLabel" name="label_9">
-              <property name="text">
-               <string>Paid by:</string>
               </property>
              </widget>
             </item>
@@ -490,6 +416,94 @@
              <widget class="QLineEdit" name="attentionNotesEdit">
               <property name="placeholderText">
                <string>Query or note</string>
+              </property>
+             </widget>
+            </item>
+            <item row="11" column="2">
+             <widget class="QLabel" name="label_9">
+              <property name="text">
+               <string>Paid by:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="12" column="2">
+             <widget class="QLineEdit" name="fromForenameEdit">
+              <property name="toolTip">
+               <string>Forename</string>
+              </property>
+              <property name="placeholderText">
+               <string>Forename</string>
+              </property>
+             </widget>
+            </item>
+            <item row="12" column="3">
+             <widget class="QLineEdit" name="fromSurnameEdit">
+              <property name="toolTip">
+               <string>Surname</string>
+              </property>
+              <property name="placeholderText">
+               <string>Surname</string>
+              </property>
+             </widget>
+            </item>
+            <item row="14" column="2">
+             <widget class="QComboBox" name="fromJobCatACombo">
+              <property name="editable">
+               <bool>false</bool>
+              </property>
+              <property name="currentText">
+               <string/>
+              </property>
+             </widget>
+            </item>
+            <item row="14" column="3">
+             <widget class="QComboBox" name="fromJobCatBCombo">
+              <property name="editable">
+               <bool>false</bool>
+              </property>
+              <property name="currentText">
+               <string/>
+              </property>
+              <property name="maxVisibleItems">
+               <number>25</number>
+              </property>
+             </widget>
+            </item>
+            <item row="13" column="2" colspan="2">
+             <widget class="QLineEdit" name="fromJobFreeEdit">
+              <property name="placeholderText">
+               <string>Occupation as written</string>
+              </property>
+             </widget>
+            </item>
+            <item row="14" column="0">
+             <widget class="QComboBox" name="toJobCatACombo">
+              <property name="editable">
+               <bool>false</bool>
+              </property>
+              <property name="currentText">
+               <string/>
+              </property>
+             </widget>
+            </item>
+            <item row="14" column="1">
+             <widget class="QComboBox" name="toJobCatBCombo">
+              <property name="maxVisibleItems">
+               <number>25</number>
+              </property>
+             </widget>
+            </item>
+            <item row="13" column="0" colspan="2">
+             <widget class="QLineEdit" name="toJobFreeEdit">
+              <property name="placeholderText">
+               <string>Occupation as written</string>
+              </property>
+             </widget>
+            </item>
+            <item row="11" column="0">
+             <widget class="QLabel" name="label_6">
+              <property name="text">
+               <string>Paid to:</string>
               </property>
              </widget>
             </item>
@@ -556,7 +570,7 @@
      <x>0</x>
      <y>0</y>
      <width>995</width>
-     <height>28</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
@@ -601,12 +615,6 @@
   <tabstop>penceTotalEdit</tabstop>
   <tabstop>toForenameEdit</tabstop>
   <tabstop>toSurnameEdit</tabstop>
-  <tabstop>toJobCatAEdit</tabstop>
-  <tabstop>toJobCatBEdit</tabstop>
-  <tabstop>fromForenameEdit</tabstop>
-  <tabstop>fromSurnameEdit</tabstop>
-  <tabstop>fromJobCatAEdit</tabstop>
-  <tabstop>fromJobCatBEdit</tabstop>
   <tabstop>benifPersonBox</tabstop>
   <tabstop>benifForenameEdit</tabstop>
   <tabstop>benifSurnameEdit</tabstop>
