--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -69,8 +69,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>575</width>
-           <height>663</height>
+           <width>557</width>
+           <height>686</height>
           </rect>
          </property>
          <layout class="QGridLayout" name="gridLayout_4">
@@ -570,7 +570,7 @@
      <x>0</x>
      <y>0</y>
      <width>995</width>
-     <height>22</height>
+     <height>28</height>
     </rect>
    </property>
   </widget>
@@ -615,6 +615,14 @@
   <tabstop>penceTotalEdit</tabstop>
   <tabstop>toForenameEdit</tabstop>
   <tabstop>toSurnameEdit</tabstop>
+  <tabstop>toJobFreeEdit</tabstop>
+  <tabstop>toJobCatACombo</tabstop>
+  <tabstop>toJobCatBCombo</tabstop>
+  <tabstop>fromForenameEdit</tabstop>
+  <tabstop>fromSurnameEdit</tabstop>
+  <tabstop>fromJobFreeEdit</tabstop>
+  <tabstop>fromJobCatACombo</tabstop>
+  <tabstop>fromJobCatBCombo</tabstop>
   <tabstop>benifPersonBox</tabstop>
   <tabstop>benifForenameEdit</tabstop>
   <tabstop>benifSurnameEdit</tabstop>
